# ocr

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
ocr/: split_pages.py
